
internal class AnimationStrings
{
    internal static readonly string moving = "isMoving";
    internal static readonly string running = "isRunning";
    internal static readonly string grounded = "isGrounded";
    internal static readonly string onWall = "isOnWall";
    internal static readonly string onCeiling = "isOnCeiling";

    internal static readonly string yVelocity = "yVelocity";
    internal static readonly string preaparingJump = "preparingJump";
}